--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,44 @@
 @charset "utf-8";
-
+:root{
+    --section_01_rokcet_width: 36vw;
+    --section_01_rokcet_height: 75vw;
+    --section_01_rokcet_margin_left: -18vw;
+    --section_01_effect_width: 46vw;
+    --section_01_effect_height: 20vw;
+    --section_01_effect_margin_left: -23vw;
+    
+    --section_02_tag_width: 25vw;
+    --section_02_button_width: 55vw;
+    --section_02_button_img_height: 45vw;
+    
+    --section_03_ul_height: 18vw;
+    --section_03_li_width: 12vw;
+    --section_03_li_height: 16vw;
+    --section_03_ball_size: 11vw;
+    --section_03_language_width: 80vw;
+    --section_03_platform_width: 48vw;
+    --section_03_tool_width: 32vw;
+    
+    --section_05_text_wrap_width: 70vw;
+    --section_05_button_width : 26vw;
+    --section_05_button_margin_left : -13vw;
+    
+    --0_5: 0.5vw;
+    --1: 1vw;
+    --2_5: 2.5vw;
+    --3: 3vw;
+    --15: 15vw;
+    --30: 30vw;
+    --40: 40vw;
+    --60: 60vw;
+}
 #section_00{
     width: 100%;
     height: 100%;
 }
 #section_00 .button_enter{
     color: #fff;
-    font-size: 4vw;
+    font-size: var(--4);
     cursor: pointer;
     top: 0;
     left: 0;
@@ -23,20 +55,20 @@
 }
 #section_01 .section_title{
     width: 100%;
-    line-height: 15vw;
+    line-height: var(--15);
     bottom: 0;
     left: 0;
     position: absolute;
-    text-shadow: 1vw 1vw 1vw rgba(0,0,0,0.5);
+    text-shadow: var(--1) var(--1) var(--1) rgba(0,0,0,0.5);
 }
 #section_01 .icon_rocket{
-    width: 36vw;
-    height: 75vw;
+    width: var(--section_01_rokcet_width);
+    height: var(--section_01_rokcet_height);
     overflow: hidden;
     
-    bottom: 15vw;
+    bottom: var(--15);
     left: 50%;
-    margin-left: -18vw;
+    margin-left: var(--section_01_rokcet_margin_left);
     z-index: 1;
     position: absolute;
 }
@@ -44,14 +76,14 @@
     position: relative;
 }
 #section_01 .icon_rocekt_place{
-    width: 36vw;
-    height: 75vw;
+    width: var(--section_01_rokcet_width);
+    height: var(--section_01_rokcet_height);
     background: url(../images/icon_rocket_place.png) no-repeat;
     background-size: 100%;
     
-    bottom: 15vw;
+    bottom: var(--15);
     left: 50%;
-    margin-left: -18vw;
+    margin-left: var(--section_01_rokcet_margin_left);
     z-index: 10;
     position: absolute;
 }
@@ -63,15 +95,15 @@
     display: none;
 }
 #section_01 .icon_effect{
-    width: 46vw;
-    height: 20vw;
+    width: var(--section_01_effect_width);
+    height: var(--section_01_effect_height);
     background: url(../images/icon_effect.png) no-repeat;
     background-size: 100%;
     opacity: 0;
     
-    bottom: 15vw;
+    bottom: var(--15);
     left: 50%;
-    margin-left: -23vw;
+    margin-left: var(--section_01_effect_margin_left);
     z-index: 2;
     position: absolute;
 }
@@ -79,18 +111,18 @@
 #section_02{
 }
 #section_02 .tag_list{
-    width: 25vw;
+    width: var(--section_02_tag_width);
     display: inline-block;
     vertical-align: middle;
 }
 #section_02 .tag_list li{
     line-height: normal;
     text-align: left;
-    margin: 2vw 0;
+    margin: var(--2) 0;
 }
 #section_02 .tag_list li div{
-    padding: 1vw;
-    font-size: 2.5vw;
+    padding: var(--1);
+    font-size: var(--2_5);
     line-height: normal;
     display: inline-block;
     color: #fff;
@@ -100,7 +132,7 @@
     color: #0076a3;
 }
 #section_02 .button{
-    width: 55vw;
+    width: var(--section_02_button_width);
     height: 100%;
     display: inline-block;
     vertical-align: middle;
@@ -110,8 +142,8 @@
 #section_02 .button .background:after{
     content: "";
     display: block;
-    width: 40vw;
-    height: 40vw;
+    width: var(--40);
+    height: var(--40);
     border-radius: 50%;
     background-color: #32004b;
     
@@ -123,13 +155,13 @@
     position: absolute;
 }
 #section_02 .button .background:after{
-    width: 30vw;
-    height: 30vw;
+    width: var(--30);
+    height: var(--30);
     background-color: #440e62;
 }
 #section_02 .button .button_profile{
-    width: 30vw;
-    height: 45vw;
+    width: var(--30);
+    height: var(--section_02_button_img_height);
     overflow: hidden;
     cursor: pointer;
     
@@ -158,19 +190,19 @@
 #section_03{
 }
 #section_03 .subject_wrap{
-    margin: 4vw 2vw;
+    margin: var(--4) var(--2);
     text-align: left;
 }
 #section_03 .subject_wrap div{
-    width: 3vw;
-    height: 3vw;
-    margin: 0 2vw;
+    width: var(--3);
+    height: var(--3);
+    margin: 0 var(--2);
     display: inline-block;
     vertical-align: middle;
     border: 1px solid #fff;
 }
 #section_03 .subject_wrap p{
-    font-size: 2vw;
+    font-size: var(--2);
     display: inline-block;
     vertical-align: middle;
     color: #fff;
@@ -185,12 +217,12 @@
     background-color: #003663;
 }
 #section_03 ul{
-    height: 18vw;
+    height: var(--section_03_ul_height);
 }
 
 #section_03 ul li{
-    width: 12vw;
-    height: 16vw;
+    width: var(--section_03_li_width);
+    height: var(--section_03_li_height);
     display: inline-block;
     vertical-align: middle;
 }
@@ -200,12 +232,12 @@
     vertical-align: middle;
 }
 #section_03 ul li div{
-    width: 11vw;
-    height: 11vw;
-    padding: 1vw;
-    line-height: 11vw;
+    width: var(--section_03_ball_size);
+    height: var(--section_03_ball_size);
+    padding: var(--1);
+    line-height: var(--section_03_ball_size);
     display: inline-block;
-    font-size: 2vw;
+    font-size: var(--2);
     color: #fff;
     border: 1px solid #fff;
     border-radius: 50%;
@@ -214,13 +246,13 @@
     width: 100%;
     height: auto;
     text-align: center;
-    margin: 2vw 0 1vw 0;
+    margin: var(--2) 0 var(--1) 0;
 }
 #section_03 .level_list li{
-    width: 2vw;
-    height: 2vw;
+    width: var(--2);
+    height: var(--2);
     padding: 0;
-    margin: 0 1vw;
+    margin: 0 var(--1);
     transform: rotate(45deg);
     opacity: 0.3;
     background-color: #9e005d;
@@ -230,15 +262,15 @@
     opacity: 1;
 }
 #section_03 .language_list{
-    width: 80vw;
+    width: var(--section_03_language_width);
 }
 #section_03 .platform_list{
-    width: 48vw;
+    width: var(--section_03_platform_width);
     display: inline-block;
     vertical-align: middle;
 }
 #section_03 .tool_list{
-    width: 32vw;
+    width: var(--section_03_tool_width);
     display: inline-block;
     vertical-align: middle;
 }
@@ -249,20 +281,20 @@
 #section_04{}
 #section_04 .work_wrap{
     width: 100%;
-    height: 60vw;
+    height: var(--60);
 }
 #section_04 .button_wrap{
     width: 100%;
-    height: 4vw;
-    line-height: 4vw;
+    height: var(--4);
+    line-height: var(--4);
     text-align: right;
 }
 #section_04 .button_wrap ul{
     display: inline-block;
 }
 #section_04 .button_wrap li, #section_04 .button_wrap span{
-    font-size: 2vw;
-    margin: 0 1vw;
+    font-size: var(--2);
+    margin: 0 var(--1);
     text-align: left;
     display: inline-block;
     vertical-align: middle;
@@ -272,9 +304,9 @@
     background:none;
 }
 #section_04 .button_wrap li div{
-    width: 1vw;
-    height: 1vw;
-    margin: 0 0.5vw;
+    width: var(--1);
+    height: var(--1);
+    margin: 0 var(--0_5);
     display: inline-block;
     vertical-align: middle;
     transform: rotate(45deg);
@@ -301,6 +333,7 @@
 
     /* Center the video */
     position: absolute;
+    z-index: -1;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
@@ -309,24 +342,24 @@
     line-height: 70vw;
 }
 #section_05 .text_wrap{
-    width: 70vw;
-    height: 60vw;
+    width: var(--section_05_text_wrap_width);
+    height: var(--60);
     line-height: normal;
     display: inline-block;
     vertical-align: middle;
-    border-radius: 3vw;
+    border-radius: var(--3);
     background-color: rgba(0,33,87,0.5);
     position: relative;
 }
 #section_05 form {
-    padding: 0 4vw;
+    padding: 0 var(--4);
 }
 #section_05 form p{
     text-align: left;
     color: #fff;
-    font-size: 2.5vw;
-    line-height: 4vw;
-    margin: 2vw 0;
+    font-size: var(--2_5);
+    line-height: var(--4);
+    margin: var(--2) 0;
 }
 /*
 #section_05 form input[name=comment] {
@@ -335,8 +368,8 @@
 }
 */
 #section_05 form textarea, #section_05 form input{
-    font-size: 2vw;
-    line-height: 2.5vw;
+    font-size: var(--2);
+    line-height: var(--2_5);
     font-family: "NotoSans", sans-serif;
     font-weight: 200;
     color: #fff;
@@ -349,312 +382,18 @@
     outline: none;
 }
 #section_05 form input[type=submit] {
-    width: 26vw;
-    padding: 1.5vw;
-    font-size: 2.5vw;
+    width: var(--section_05_button_width);
+    padding: var(--1_5);
+    font-size: var(--2_5);
     font-weight: 600;
     color: #fff;
     cursor: pointer;
     background-color: #002157;
     border: 0;
     
-    bottom: 2vw;
+    bottom: var(--2);
     left: 50%;
-    margin-left: -13vw;
+    margin-left: var(--section_05_button_margin_left);
     
     position: absolute;
-}
-
-@media (min-width:1000px) and (min-height: 800px) {
-    #section_01 .section_title{
-        line-height: 150px;
-        text-shadow: 10px 10px 10px rgba(0,0,0,0.5);
-    }
-    #section_01 .icon_rocket{
-        width: 360px;
-        height: 750px;
-
-        bottom: 150px;
-        margin-left: -180px;
-    }
-    #section_01 .icon_rocekt_place{
-        width: 360px;
-        height: 750px;
-
-        bottom: 150px;
-        margin-left: -180px;
-    }
-    #section_01 .icon_effect{
-        width: 460px;
-        height: 200px;
-
-        bottom: 150px;
-        margin-left: -230px;
-    }
-    #section_02 .tag_list{
-        width: 250px;
-    }
-    #section_02 .tag_list li{
-        margin: 20px 0;
-    }
-    #section_02 .tag_list li div{
-        padding: 10px;
-        font-size: 25px;
-    }
-    #section_02 .button{
-        width: 550px;
-    }
-    #section_02 .button .background,
-    #section_02 .button .background:after{
-        width: 400px;
-        height: 400px;
-    }
-    #section_02 .button .background:after{
-        width: 300px;
-        height: 300px;
-    }
-    #section_02 .button .button_profile{
-        width: 300px;
-        height: 450px;
-    }
-
-    #section_03{
-    }
-    #section_03 .subject_wrap{
-        margin: 40px 20px;
-    }
-    #section_03 .subject_wrap div{
-        width: 30px;
-        height: 30px;
-        margin: 0 20px;
-    }
-    #section_03 ul{
-        height: 180px;
-    }
-    #section_03 ul li{
-        width: 120px;
-        height: 160px;
-    }
-    #section_03 .subject_wrap p{
-        font-size: 20px;
-    }
-    #section_03 ul li div{
-        width: 110px;
-        height: 110px;
-        padding: 10px;
-        line-height: 110px;
-        font-size: 20px;
-    }
-    #section_03 .level_list{
-        margin: 20px 0 10px 0;
-    }
-    #section_03 .level_list li{
-        width: 20px;
-        height: 20px;
-        margin: 0 10px;
-    }
-    #section_03 .language_list{
-        width: 800px;
-    }
-    #section_03 .platform_list{
-        width: 480px;
-    }
-    #section_03 .tool_list{
-        width: 320px;
-    }
-    
-    
-    #section_04 .work_wrap{
-        height: 600px;
-    }
-    #section_04 .button_wrap{
-        height: 40px;
-        line-height: 40px;
-    }
-    #section_04 .button_wrap li{
-        font-size: 20px;
-        margin: 0 10px;
-    }
-    #section_04 .button_wrap li div{
-        width: 10px;
-        height: 10px;
-        margin: 0 5px;
-    }
-
-    
-    #section_05 .content_wrap{
-        line-height: 700px;
-    }
-    #section_05 .text_wrap{
-        width: 700px;
-        height: 600px;
-        border-radius: 30px;
-    }
-    #section_05 form {
-        padding: 0 40px;
-    }
-    #section_05 form p{
-        font-size: 25px;
-        line-height: 40px;
-        margin: 20px 0;
-    }
-    #section_05 form textarea, #section_05 form input{
-        font-size: 20px;
-        line-height: 25px;
-    }
-    #section_05 form input[type=submit] {
-        width: 260px;
-        padding: 15px;
-        font-size: 25px;
-
-        bottom: 20px;
-        margin-left: -130px;
-    }
-}
-@media (max-height: 800px) and (min-aspect-ratio:10/8) {
-    #section_01 .section_title{
-        line-height: 18.75vh;
-        text-shadow: 1.25vh 1.25vh 1.25vh rgba(0,0,0,0.5);
-    }
-    #section_01 .icon_rocket{
-        width: 45vh;
-        height: 93.75vh;
-
-        bottom: 18.75vh;
-        margin-left: -22.5vh;
-    }
-    #section_01 .icon_rocekt_place{
-        width: 45vh;
-        height: 93.75vh;
-
-        bottom: 18.75vh;
-        margin-left: -22.5vh;
-    }
-    #section_01 .icon_effect{
-        width: 57.5vh;
-        height: 25vh;
-
-        bottom: 18.75vh;
-        margin-left: -28.75vh;
-    }
-
-    #section_02 .tag_list{
-        width: 31.25vh;
-    }
-    #section_02 .tag_list li{
-        margin: 2.5vh 0;
-    }
-    #section_02 .tag_list li div{
-        padding: 1.25vh;
-        font-size: 3.125vh;
-    }
-    #section_02 .button{
-        width: 68.75vh;
-    }
-    #section_02 .button .background,
-    #section_02 .button .background:after{
-        width: 50vh;
-        height: 50vh;
-    }
-    #section_02 .button .background:after{
-        width: 37.5vh;
-        height: 37.5vh;
-    }
-    #section_02 .button .button_profile{
-        width: 37.5vh;
-        height: 56.25vh;
-    }
-
-    #section_03{
-    }
-    #section_03 .subject_wrap{
-        margin: 5vh 2.5vh;
-    }
-    #section_03 .subject_wrap div{
-        width: 3.75vh;
-        height: 3.75vh;
-        margin: 0 2.5vh;
-    }
-    #section_03 ul{
-        height: 22.5vh;
-    }
-    #section_03 ul li{
-        width: 15vh;
-        height: 20vh;
-    }
-    #section_03 .subject_wrap p{
-        font-size: 2.5vh;
-    }
-    #section_03 ul li div{
-        width: 13.75vh;
-        height: 13.75vh;
-        padding: 1.25vh;
-        line-height: 13.75vh;
-        font-size: 2.5vh;
-    }
-    #section_03 .level_list{
-        margin: 2.5vh 0 1.25vh 0;
-    }
-    #section_03 .level_list li{
-        width: 2.5vh;
-        height: 2.5vh;
-        margin: 0 1.25vh;
-    }
-    #section_03 .language_list{
-        width: 100vh;
-    }
-    #section_03 .platform_list{
-        width: 60vh;
-    }
-    #section_03 .tool_list{
-        width: 40vh;
-    }
-    
-    
-    #section_04 .work_wrap{
-        height: 75vh;
-    }
-    #section_04 .button_wrap{
-        height: 5vh;
-        line-height: 5vh;
-    }
-    #section_04 .button_wrap li{
-        font-size: 2.5vh;
-        margin: 0 1.25vh;
-    }
-    #section_04 .button_wrap li div{
-        width: 1.25vh;
-        height: 1.25vh;
-        margin: 0 0.625vh;
-    }
-
-    
-    #section_05 .content_wrap{
-        line-height: 87.5vh;
-    }
-    #section_05 .text_wrap{
-        width: 87.5vh;
-        height: 75vh;
-        border-radius: 3.75vh;
-    }
-    #section_05 form {
-        padding: 0 5vh;
-    }
-    #section_05 form p{
-        font-size: 3.125vh;
-        line-height: 5vh;
-        margin: 2.5vh 0;
-    }
-    #section_05 form textarea, #section_05 form input{
-        font-size: 2.5vh;
-        line-height: 3.125vh;
-    }
-    #section_05 form input[type=submit] {
-        width: 32.5vh;
-        padding: 1.875vh;
-        font-size: 3.125vh;
-
-        bottom: 2.5vh;
-        margin-left: -16.25vh;
-    }
 }
