--- a/css/style.css
+++ b/css/style.css
@@ -318,6 +318,11 @@
 #section_05{
     position: relative;
 }
+#section_05 *{
+    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+    box-sizing: border-box;         /* Opera/IE 8+ */
+}
 #section_05 video_wrap{
     top: 0;
     bottom: 0;
