--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-:root{
+body{
     --section_01_rokcet_width: 36vw;
     --section_01_rokcet_height: 75vw;
     --section_01_rokcet_margin_left: -18vw;
