--- a/css/style.css
+++ b/css/style.css
@@ -1,44 +1,11 @@
 @charset "utf-8";
-body{
-    --section_01_rokcet_width: 36vw;
-    --section_01_rokcet_height: 75vw;
-    --section_01_rokcet_margin_left: -18vw;
-    --section_01_effect_width: 46vw;
-    --section_01_effect_height: 20vw;
-    --section_01_effect_margin_left: -23vw;
-    
-    --section_02_tag_width: 25vw;
-    --section_02_button_width: 55vw;
-    --section_02_button_img_height: 45vw;
-    
-    --section_03_ul_height: 18vw;
-    --section_03_li_width: 12vw;
-    --section_03_li_height: 16vw;
-    --section_03_ball_size: 11vw;
-    --section_03_language_width: 80vw;
-    --section_03_platform_width: 48vw;
-    --section_03_tool_width: 32vw;
-    
-    --section_05_text_wrap_width: 70vw;
-    --section_05_button_width : 26vw;
-    --section_05_button_margin_left : -13vw;
-    
-    --0_5: 0.5vw;
-    --1: 1vw;
-    --2_5: 2.5vw;
-    --3: 3vw;
-    --15: 15vw;
-    --30: 30vw;
-    --40: 40vw;
-    --60: 60vw;
-}
 #section_00{
     width: 100%;
     height: 100%;
 }
 #section_00 .button_enter{
     color: #fff;
-    font-size: var(--4);
+    font-size: 4vw;
     cursor: pointer;
     top: 0;
     left: 0;
@@ -55,20 +22,20 @@ body{
 }
 #section_01 .section_title{
     width: 100%;
-    line-height: var(--15);
+    line-height: 15vw;
     bottom: 0;
     left: 0;
     position: absolute;
-    text-shadow: var(--1) var(--1) var(--1) rgba(0,0,0,0.5);
+    text-shadow: 1vw 1vw 1vw rgba(0,0,0,0.5);
 }
 #section_01 .icon_rocket{
-    width: var(--section_01_rokcet_width);
-    height: var(--section_01_rokcet_height);
+    width: 36vw;
+    height: 75vw;
     overflow: hidden;
     
-    bottom: var(--15);
+    bottom: 15vw;
     left: 50%;
-    margin-left: var(--section_01_rokcet_margin_left);
+    margin-left: -18vw;
     z-index: 1;
     position: absolute;
 }
@@ -76,14 +43,14 @@ body{
     position: relative;
 }
 #section_01 .icon_rocekt_place{
-    width: var(--section_01_rokcet_width);
-    height: var(--section_01_rokcet_height);
+    width: 36vw;
+    height: 75vw;
     background: url(../images/icon_rocket_place.png) no-repeat;
     background-size: 100%;
     
-    bottom: var(--15);
+    bottom: 15vw;
     left: 50%;
-    margin-left: var(--section_01_rokcet_margin_left);
+    margin-left: -18vw;
     z-index: 10;
     position: absolute;
 }
@@ -95,15 +62,15 @@ body{
     display: none;
 }
 #section_01 .icon_effect{
-    width: var(--section_01_effect_width);
-    height: var(--section_01_effect_height);
+    width: 46vw;
+    height: 20vw;
     background: url(../images/icon_effect.png) no-repeat;
     background-size: 100%;
     opacity: 0;
     
-    bottom: var(--15);
+    bottom: 15vw;
     left: 50%;
-    margin-left: var(--section_01_effect_margin_left);
+    margin-left: -23vw;
     z-index: 2;
     position: absolute;
 }
@@ -111,18 +78,18 @@ body{
 #section_02{
 }
 #section_02 .tag_list{
-    width: var(--section_02_tag_width);
+    width: 25vw;
     display: inline-block;
     vertical-align: middle;
 }
 #section_02 .tag_list li{
     line-height: normal;
     text-align: left;
-    margin: var(--2) 0;
+    margin: 2vw 0;
 }
 #section_02 .tag_list li div{
-    padding: var(--1);
-    font-size: var(--2_5);
+    padding: 1vw;
+    font-size: 2.5vw;
     line-height: normal;
     display: inline-block;
     color: #fff;
@@ -132,7 +99,7 @@ body{
     color: #0076a3;
 }
 #section_02 .button{
-    width: var(--section_02_button_width);
+    width: 55vw;
     height: 100%;
     display: inline-block;
     vertical-align: middle;
@@ -142,8 +109,8 @@ body{
 #section_02 .button .background:after{
     content: "";
     display: block;
-    width: var(--40);
-    height: var(--40);
+    width: 40vw;
+    height: 40vw;
     border-radius: 50%;
     background-color: #32004b;
     
@@ -155,13 +122,13 @@ body{
     position: absolute;
 }
 #section_02 .button .background:after{
-    width: var(--30);
-    height: var(--30);
+    width: 30vw;
+    height: 30vw;
     background-color: #440e62;
 }
 #section_02 .button .button_profile{
-    width: var(--30);
-    height: var(--section_02_button_img_height);
+    width: 30vw;
+    height: 45vw;
     overflow: hidden;
     cursor: pointer;
     
@@ -190,19 +157,19 @@ body{
 #section_03{
 }
 #section_03 .subject_wrap{
-    margin: var(--4) var(--2);
+    margin: 4vw 2vw;
     text-align: left;
 }
 #section_03 .subject_wrap div{
-    width: var(--3);
-    height: var(--3);
-    margin: 0 var(--2);
+    width: 3vw;
+    height: 3vw;
+    margin: 0 2vw;
     display: inline-block;
     vertical-align: middle;
     border: 1px solid #fff;
 }
 #section_03 .subject_wrap p{
-    font-size: var(--2);
+    font-size: 2vw;
     display: inline-block;
     vertical-align: middle;
     color: #fff;
@@ -217,12 +184,12 @@ body{
     background-color: #003663;
 }
 #section_03 ul{
-    height: var(--section_03_ul_height);
+    height: 18vw;
 }
 
 #section_03 ul li{
-    width: var(--section_03_li_width);
-    height: var(--section_03_li_height);
+    width: 12vw;
+    height: 16vw;
     display: inline-block;
     vertical-align: middle;
 }
@@ -232,12 +199,12 @@ body{
     vertical-align: middle;
 }
 #section_03 ul li div{
-    width: var(--section_03_ball_size);
-    height: var(--section_03_ball_size);
-    padding: var(--1);
-    line-height: var(--section_03_ball_size);
+    width: 11vw;
+    height: 11vw;
+    padding: 1vw;
+    line-height: 11vw;
     display: inline-block;
-    font-size: var(--2);
+    font-size: 2vw;
     color: #fff;
     border: 1px solid #fff;
     border-radius: 50%;
@@ -246,13 +213,13 @@ body{
     width: 100%;
     height: auto;
     text-align: center;
-    margin: var(--2) 0 var(--1) 0;
+    margin: 2vw 0 1vw 0;
 }
 #section_03 .level_list li{
-    width: var(--2);
-    height: var(--2);
+    width: 2vw;
+    height: 2vw;
     padding: 0;
-    margin: 0 var(--1);
+    margin: 0 1vw;
     transform: rotate(45deg);
     opacity: 0.3;
     background-color: #9e005d;
@@ -262,15 +229,15 @@ body{
     opacity: 1;
 }
 #section_03 .language_list{
-    width: var(--section_03_language_width);
+    width: 80vw;
 }
 #section_03 .platform_list{
-    width: var(--section_03_platform_width);
+    width: 48vw;
     display: inline-block;
     vertical-align: middle;
 }
 #section_03 .tool_list{
-    width: var(--section_03_tool_width);
+    width: 32vw;
     display: inline-block;
     vertical-align: middle;
 }
@@ -281,20 +248,20 @@ body{
 #section_04{}
 #section_04 .work_wrap{
     width: 100%;
-    height: var(--60);
+    height: 60vw;
 }
 #section_04 .button_wrap{
     width: 100%;
-    height: var(--4);
-    line-height: var(--4);
+    height: 4vw;
+    line-height: 4vw;
     text-align: right;
 }
 #section_04 .button_wrap ul{
     display: inline-block;
 }
 #section_04 .button_wrap li, #section_04 .button_wrap span{
-    font-size: var(--2);
-    margin: 0 var(--1);
+    font-size: 2vw;
+    margin: 0 1vw;
     text-align: left;
     display: inline-block;
     vertical-align: middle;
@@ -304,9 +271,9 @@ body{
     background:none;
 }
 #section_04 .button_wrap li div{
-    width: var(--1);
-    height: var(--1);
-    margin: 0 var(--0_5);
+    width: 1vw;
+    height: 1vw;
+    margin: 0 0.5vw;
     display: inline-block;
     vertical-align: middle;
     transform: rotate(45deg);
@@ -317,11 +284,6 @@ body{
 
 #section_05{
     position: relative;
-}
-#section_05 *{
-    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
-    box-sizing: border-box;         /* Opera/IE 8+ */
 }
 #section_05 video_wrap{
     top: 0;
@@ -338,35 +300,32 @@ body{
 
     /* Center the video */
     position: absolute;
-    z-index: -1;
     top: 50%;
     left: 50%;
-    -webkit-transform: translate(-50%,-50%);
-    -ms-transform: translate(-50%,-50%);
     transform: translate(-50%,-50%);
 }
 #section_05 .content_wrap{
-    line-height: var(--content_wrap_height);
+    line-height: 70vw;
 }
 #section_05 .text_wrap{
-    width: var(--section_05_text_wrap_width);
-    height: var(--60);
+    width: 70vw;
+    height: 60vw;
     line-height: normal;
     display: inline-block;
     vertical-align: middle;
-    border-radius: var(--3);
+    border-radius: 3vw;
     background-color: rgba(0,33,87,0.5);
     position: relative;
 }
 #section_05 form {
-    padding: 0 var(--4);
+    padding: 0 4vw;
 }
 #section_05 form p{
     text-align: left;
     color: #fff;
-    font-size: var(--2_5);
-    line-height: var(--4);
-    margin: var(--2) 0;
+    font-size: 2.5vw;
+    line-height: 4vw;
+    margin: 2vw 0;
 }
 /*
 #section_05 form input[name=comment] {
@@ -375,8 +334,8 @@ body{
 }
 */
 #section_05 form textarea, #section_05 form input{
-    font-size: var(--2);
-    line-height: var(--2_5);
+    font-size: 2vw;
+    line-height: 2.5vw;
     font-family: "NotoSans", sans-serif;
     font-weight: 200;
     color: #fff;
@@ -389,18 +348,18 @@ body{
     outline: none;
 }
 #section_05 form input[type=submit] {
-    width: var(--section_05_button_width);
-    padding: var(--1_5);
-    font-size: var(--2_5);
+    width: 26vw;
+    padding: 1.5vw;
+    font-size: 2.5vw;
     font-weight: 600;
     color: #fff;
     cursor: pointer;
     background-color: #002157;
     border: 0;
     
-    bottom: var(--2);
+    bottom: 2vw;
     left: 50%;
-    margin-left: var(--section_05_button_margin_left);
+    margin-left: -13vw;
     
     position: absolute;
 }
