--- a/css/include.css
+++ b/css/include.css
@@ -1,23 +1,10 @@
 @charset "utf-8";
 body{
-    --content_wrap_width: 80vw;
-    --content_wrap_height: 70vw;
-    --content_wrap_margin_top: -35vw;
-    --content_wrap_margin_left: -40vw;
-    
-    --header_height: 100vh;
-    --header_bottom: -100vh;
-    
-    --1_5: 1.5vw;
-    --2: 2vw;
-    --4: 4vw;
-    --8: 8vw;
-    --10: 10vw;
-}
-body{
+/*    min-height: 1000px;*/
     height: 100vh;
     width: 100vw;
     overflow: hidden;
+    line-height: 100vh;
     text-align: center;
     
     font-family: "NotoSans",sans-serif;
@@ -31,29 +18,29 @@ body{
 }
 
 .content_wrap{
-    width: var(--content_wrap_width);
-    height: var(--content_wrap_height);
+    width: 80vw;
+    height: 70vw;
     line-height: normal;
     cursor: default;
     top: 50%;
-    margin-top: var(--content_wrap_margin_top);
+    margin-top: -35vw;
     left: 50%;
-    margin-left: var(--content_wrap_margin_left);
+    margin-left: -40vw;
     z-index: 1;
     position: absolute;
     
 }
 .section_title{
     color: #fff;
-    font-size: var(--4);
-    line-height: var(--8);
+    font-size: 4vw;
+    line-height: 8vw;
 }
 
 #header{
-    width: var(--10);
-    height: var(--header_height);
-    line-height: var(--header_height);
-    bottom: var(--header_bottom);
+    width: 10vw;
+    height: 100vh;
+    line-height: 100vh;
+    bottom: -100vh;
     right: 0;
     z-index: 100;
     position: fixed;
@@ -63,21 +50,21 @@ body{
     vertical-align: middle;
 }
 .gnb h1{
-    width: var(--10);
-    height: var(--10);
+    width: 10vw;
+    height: 10vw;
     cursor: pointer;
     background: url(../images/icon_button_top.png) no-repeat;
     background-size: 100%;
 }
 .gnb ul{
-    width: var(--10);
-    line-height: var(--10);
+    width: 10vw;
+    line-height: 10vw;
 }
 .gnb ul li{
-    margin-top: var(--2);
+    margin-top: 2vw;
 }
 .gnb ul li a{
-    font-size: var(--2);
+    font-size: 2vw;
     line-height: normal;
     display: inline-block;
     vertical-align: middle;
@@ -92,7 +79,7 @@ body{
 
 /* width */
 ::-webkit-scrollbar {
-    width: var(--1_5);
+    width: 1.5vw;
 }
 
 /* Track */
@@ -108,4 +95,75 @@ body{
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
     background: #555; 
+}
+
+@media (min-width:1000px) and (min-height: 800px) {
+    #wrap .content_wrap{
+        width: 800px;
+        height: 700px;
+        top: 50%;
+        margin-top: -350px;
+        left: 50%;
+        margin-left: -400px;
+        position: absolute;
+    }
+    .section_title{
+        color: #fff;
+        font-size: 40px;
+        line-height: 60px;
+    }
+    .gnb #home{
+        width: 100px;
+        height: 100px;
+    }
+    .gnb ul{
+        width: 100px;
+        line-height: 100px;
+    }
+    .gnb ul li{
+        margin-top: 40px;
+    }
+    .gnb ul li a{
+        font-size: 20px;
+    }
+    
+    /* width */
+    ::-webkit-scrollbar {
+        width: 15px;
+    }
+}
+@media (max-height: 800px) and (min-aspect-ratio:10/8) {
+    #wrap .content_wrap{
+        width: 100vh;
+        height: 87.5vh;
+        top: 50%;
+        margin-top: -43.75vh;
+        left: 50%;
+        margin-left: -50vh;
+        position: absolute;
+    }
+    .section_title{
+        color: #fff;
+        font-size: 5vh;
+        line-height: 7.5vh;
+    }
+    .gnb #home{
+        width: 12.5vh;
+        height: 12.5vh;
+    }
+    .gnb ul{
+        width: 12.5vh;
+        line-height: 12.5vh;
+    }
+    .gnb ul li{
+        margin-top: 5vh;
+    }
+    .gnb ul li a{
+        font-size: 2.5vh;
+    }
+    
+    /* width */
+    ::-webkit-scrollbar {
+        width: 1.875vh;
+    }
 }
