--- a/css/style.css
+++ b/css/style.css
@@ -300,6 +300,7 @@
 
     /* Center the video */
     position: absolute;
+    z-index: -1;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
