--- a/css/media_rotated.css
+++ b/css/media_rotated.css
@@ -212,7 +212,7 @@
     margin-left: -13vh;
 }
 
-@media (min-width:1000px) and (min-height: 800px) {
+@media (min-height:1000px) and (min-width: 800px) {
     /*include.css*/
     #wrap .content_wrap{
         width: 800px;
