--- a/css/media.css
+++ b/css/media.css
@@ -360,3 +360,587 @@
         margin-left: -16.25vh;
     }
 }
+
+@media screen and (orientation:portrait) and (pointer:coarse){
+#header{
+    width: 10vh;
+    height: 100vw;
+    line-height: 100vw;
+    bottom: -100vw;
+    right: 0;
+    z-index: 100;
+    position: fixed;
+}
+.gnb{
+    display: inline-block;
+    vertical-align: middle;
+}
+.gnb h1{
+    width: 10vh;
+    height: 10vh;
+    cursor: pointer;
+    background: url(../images/icon_button_top.png) no-repeat;
+    background-size: 100%;
+}
+.gnb ul{
+    width: 10vh;
+    line-height: 10vh;
+}
+.gnb ul li{
+    margin-top: 2vh;
+}
+.gnb ul li a{
+    font-size: 2vh;
+}
+
+/*include.css*/
+#wrap .content_wrap{
+    width: 80vh;
+    height: 70vh;
+    top: 50%;
+    margin-top: -35vh;
+    left: 50%;
+    margin-left: -40vh;
+    position: absolute;
+}
+.section_title{
+    color: #fff;
+    font-size: 4vh;
+    line-height: 6vh;
+}
+.gnb #home{
+    width: 10vh;
+    height: 10vh;
+}
+.gnb ul{
+    width: 10vh;
+    line-height: 10vh;
+}
+.gnb ul li{
+    margin-top: 4vh;
+}
+.gnb ul li a{
+    font-size: 2vh;
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 1vh;
+}
+
+/*style.css*/
+#section_01 .section_title{
+    line-height: 15vh;
+    text-shadow: 1vh 1vh 1vh rgba(0,0,0,0.5);
+}
+#section_01 .icon_rocket{
+    width: 36vh;
+    height: 75vh;
+
+    bottom: 15vh;
+    margin-left: -18vh;
+}
+#section_01 .icon_rocekt_place{
+    width: 36vh;
+    height: 75vh;
+
+    bottom: 15vh;
+    margin-left: -18vh;
+}
+#section_01 .icon_effect{
+    width: 46vh;
+    height: 20vh;
+
+    bottom: 15vh;
+    margin-left: -23vh;
+}
+#section_02 .tag_list{
+    width: 25vh;
+}
+#section_02 .tag_list li{
+    margin: 2vh 0;
+}
+#section_02 .tag_list li div{
+    padding: 1vh;
+    font-size: 2vh;
+}
+#section_02 .button{
+    width: 55vh;
+}
+#section_02 .button .background,
+#section_02 .button .background:after{
+    width: 40vh;
+    height: 40vh;
+}
+#section_02 .button .background:after{
+    width: 30vh;
+    height: 30vh;
+}
+#section_02 .button .button_profile{
+    width: 30vh;
+    height: 45vh;
+}
+
+#section_03{
+}
+#section_03 .subject_wrap{
+    margin: 4vh 2vh;
+}
+#section_03 .subject_wrap div{
+    width: 3vh;
+    height: 3vh;
+    margin: 0 2vh;
+}
+#section_03 ul{
+    height: 18vh;
+}
+#section_03 ul li{
+    width: 12vh;
+    height: 16vh;
+}
+#section_03 .subject_wrap p{
+    font-size: 2vh;
+}
+#section_03 ul li div{
+    width: 11vh;
+    height: 11vh;
+    padding: 1vh;
+    line-height: 11vh;
+    font-size: 2vh;
+}
+#section_03 .level_list{
+    margin: 2vh 0 1vh 0;
+}
+#section_03 .level_list li{
+    width: 2vh;
+    height: 2vh;
+    margin: 0 1vh;
+}
+#section_03 .language_list{
+    width: 80vh;
+}
+#section_03 .platform_list{
+    width: 48vh;
+}
+#section_03 .tool_list{
+    width: 32vh;
+}
+
+
+#section_04 .work_wrap{
+    height: 60vh;
+}
+#section_04 .button_wrap{
+    height: 4vh;
+    line-height: 4vh;
+}
+#section_04 .button_wrap li{
+    font-size: 2vh;
+    margin: 0 1vh;
+}
+#section_04 .button_wrap li div{
+    width: 1vh;
+    height: 1vh;
+    margin: 0 vh;
+}
+
+
+#section_05 .content_wrap{
+    line-height: 70vh;
+}
+#section_05 .text_wrap{
+    width: 70vh;
+    height: 60vh;
+    border-radius: 3vh;
+}
+#section_05 form {
+    padding: 0 4vh;
+}
+#section_05 form p{
+    font-size: 2vh;
+    line-height: 4vh;
+    margin: 2vh 0;
+}
+#section_05 form textarea, #section_05 form input{
+    font-size: 2vh;
+    line-height: 2vh;
+}
+#section_05 form input[type=submit] {
+    width: 26vh;
+    padding: 1vh;
+    font-size: 2vh;
+
+    bottom: 2vh;
+    margin-left: -13vh;
+}
+}
+
+@media screen and (orientation:portrait) and (pointer:coarse)
+    and (min-height:1000px) and (min-width: 800px){
+    /*include.css*/
+    #wrap .content_wrap{
+        width: 800px;
+        height: 700px;
+        top: 50%;
+        margin-top: -350px;
+        left: 50%;
+        margin-left: -400px;
+        position: absolute;
+    }
+    .section_title{
+        color: #fff;
+        font-size: 40px;
+        line-height: 60px;
+    }
+    .gnb #home{
+        width: 100px;
+        height: 100px;
+    }
+    .gnb ul{
+        width: 100px;
+        line-height: 100px;
+    }
+    .gnb ul li{
+        margin-top: 40px;
+    }
+    .gnb ul li a{
+        font-size: 20px;
+    }
+
+    /* width */
+    ::-webkit-scrollbar {
+        width: 15px;
+    }
+
+    /*style.css*/
+    #section_01 .section_title{
+        line-height: 150px;
+        text-shadow: 10px 10px 10px rgba(0,0,0,0.5);
+    }
+    #section_01 .icon_rocket{
+        width: 360px;
+        height: 750px;
+
+        bottom: 150px;
+        margin-left: -180px;
+    }
+    #section_01 .icon_rocekt_place{
+        width: 360px;
+        height: 750px;
+
+        bottom: 150px;
+        margin-left: -180px;
+    }
+    #section_01 .icon_effect{
+        width: 460px;
+        height: 200px;
+
+        bottom: 150px;
+        margin-left: -230px;
+    }
+    #section_02 .tag_list{
+        width: 250px;
+    }
+    #section_02 .tag_list li{
+        margin: 20px 0;
+    }
+    #section_02 .tag_list li div{
+        padding: 10px;
+        font-size: 25px;
+    }
+    #section_02 .button{
+        width: 550px;
+    }
+    #section_02 .button .background,
+    #section_02 .button .background:after{
+        width: 400px;
+        height: 400px;
+    }
+    #section_02 .button .background:after{
+        width: 300px;
+        height: 300px;
+    }
+    #section_02 .button .button_profile{
+        width: 300px;
+        height: 450px;
+    }
+
+    #section_03{
+    }
+    #section_03 .subject_wrap{
+        margin: 40px 20px;
+    }
+    #section_03 .subject_wrap div{
+        width: 30px;
+        height: 30px;
+        margin: 0 20px;
+    }
+    #section_03 ul{
+        height: 180px;
+    }
+    #section_03 ul li{
+        width: 120px;
+        height: 160px;
+    }
+    #section_03 .subject_wrap p{
+        font-size: 20px;
+    }
+    #section_03 ul li div{
+        width: 110px;
+        height: 110px;
+        padding: 10px;
+        line-height: 110px;
+        font-size: 20px;
+    }
+    #section_03 .level_list{
+        margin: 20px 0 10px 0;
+    }
+    #section_03 .level_list li{
+        width: 20px;
+        height: 20px;
+        margin: 0 10px;
+    }
+    #section_03 .language_list{
+        width: 800px;
+    }
+    #section_03 .platform_list{
+        width: 480px;
+    }
+    #section_03 .tool_list{
+        width: 320px;
+    }
+
+
+    #section_04 .work_wrap{
+        height: 600px;
+    }
+    #section_04 .button_wrap{
+        height: 40px;
+        line-height: 40px;
+    }
+    #section_04 .button_wrap li{
+        font-size: 20px;
+        margin: 0 10px;
+    }
+    #section_04 .button_wrap li div{
+        width: 10px;
+        height: 10px;
+        margin: 0 5px;
+    }
+
+
+    #section_05 .content_wrap{
+        line-height: 700px;
+    }
+    #section_05 .text_wrap{
+        width: 700px;
+        height: 600px;
+        border-radius: 30px;
+    }
+    #section_05 form {
+        padding: 0 40px;
+    }
+    #section_05 form p{
+        font-size: 25px;
+        line-height: 40px;
+        margin: 20px 0;
+    }
+    #section_05 form textarea, #section_05 form input{
+        font-size: 20px;
+        line-height: 25px;
+    }
+    #section_05 form input[type=submit] {
+        width: 260px;
+        padding: 15px;
+        font-size: 25px;
+
+        bottom: 20px;
+        margin-left: -130px;
+    }
+}
+
+@media screen and (orientation:portrait) and (pointer:coarse)
+    and (max-width: 800px) and (max-aspect-ratio:8/10){
+    /*include.css*/
+    #wrap .content_wrap{
+        width: 100vw;
+        height: 87.5vw;
+        top: 50%;
+        margin-top: -43.75vw;
+        left: 50%;
+        margin-left: -50vw;
+        position: absolute;
+    }
+    .section_title{
+        color: #fff;
+        font-size: 5vw;
+        line-height: 7.5vw;
+    }
+    .gnb #home{
+        width: 12.5vw;
+        height: 12.5vw;
+    }
+    .gnb ul{
+        width: 12.5vw;
+        line-height: 12.5vw;
+    }
+    .gnb ul li{
+        margin-top: 5vw;
+    }
+    .gnb ul li a{
+        font-size: 2.5vw;
+    }
+    
+    /* width */
+    ::-webkit-scrollbar {
+        width: 1.875vw;
+    }
+    
+    
+    /*style.css*/
+    #section_01 .section_title{
+        line-height: 18.75vw;
+        text-shadow: 1.25vw 1.25vw 1.25vw rgba(0,0,0,0.5);
+    }
+    #section_01 .icon_rocket{
+        width: 45vw;
+        height: 93.75vw;
+
+        bottom: 18.75vw;
+        margin-left: -22.5vw;
+    }
+    #section_01 .icon_rocekt_place{
+        width: 45vw;
+        height: 93.75vw;
+
+        bottom: 18.75vw;
+        margin-left: -22.5vw;
+    }
+    #section_01 .icon_effect{
+        width: 57.5vw;
+        height: 25vw;
+
+        bottom: 18.75vw;
+        margin-left: -28.75vw;
+    }
+
+    #section_02 .tag_list{
+        width: 31.25vw;
+    }
+    #section_02 .tag_list li{
+        margin: 2.5vw 0;
+    }
+    #section_02 .tag_list li div{
+        padding: 1.25vw;
+        font-size: 3.125vw;
+    }
+    #section_02 .button{
+        width: 68.75vw;
+    }
+    #section_02 .button .background,
+    #section_02 .button .background:after{
+        width: 50vw;
+        height: 50vw;
+    }
+    #section_02 .button .background:after{
+        width: 37.5vw;
+        height: 37.5vw;
+    }
+    #section_02 .button .button_profile{
+        width: 37.5vw;
+        height: 56.25vw;
+    }
+
+    #section_03{
+    }
+    #section_03 .subject_wrap{
+        margin: 5vw 2.5vw;
+    }
+    #section_03 .subject_wrap div{
+        width: 3.75vw;
+        height: 3.75vw;
+        margin: 0 2.5vw;
+    }
+    #section_03 ul{
+        height: 22.5vw;
+    }
+    #section_03 ul li{
+        width: 15vw;
+        height: 20vw;
+    }
+    #section_03 .subject_wrap p{
+        font-size: 2.5vw;
+    }
+    #section_03 ul li div{
+        width: 13.75vw;
+        height: 13.75vw;
+        padding: 1.25vw;
+        line-height: 13.75vw;
+        font-size: 2.5vw;
+    }
+    #section_03 .level_list{
+        margin: 2.5vw 0 1.25vw 0;
+    }
+    #section_03 .level_list li{
+        width: 2.5vw;
+        height: 2.5vw;
+        margin: 0 1.25vw;
+    }
+    #section_03 .language_list{
+        width: 100vw;
+    }
+    #section_03 .platform_list{
+        width: 60vw;
+    }
+    #section_03 .tool_list{
+        width: 40vw;
+    }
+    
+    
+    #section_04 .work_wrap{
+        height: 75vw;
+    }
+    #section_04 .button_wrap{
+        height: 5vw;
+        line-height: 5vw;
+    }
+    #section_04 .button_wrap li{
+        font-size: 2.5vw;
+        margin: 0 1.25vw;
+    }
+    #section_04 .button_wrap li div{
+        width: 1.25vw;
+        height: 1.25vw;
+        margin: 0 0.625vw;
+    }
+
+    
+    #section_05 .content_wrap{
+        line-height: 87.5vw;
+    }
+    #section_05 .text_wrap{
+        width: 87.5vw;
+        height: 75vw;
+        border-radius: 3.75vw;
+    }
+    #section_05 form {
+        padding: 0 5vw;
+    }
+    #section_05 form p{
+        font-size: 3.125vw;
+        line-height: 5vw;
+        margin: 2.5vw 0;
+    }
+    #section_05 form textarea, #section_05 form input{
+        font-size: 2.5vw;
+        line-height: 3.125vw;
+    }
+    #section_05 form input[type=submit] {
+        width: 32.5vw;
+        padding: 1.875vw;
+        font-size: 3.125vw;
+
+        bottom: 2.5vw;
+        margin-left: -16.25vw;
+    }
+}
