reduce to call resize

--- a/css/style.css
+++ b/css/style.css
@@ -293,10 +293,11 @@
     overflow: hidden;
 }
 #section_05 video{
+    object-fit: cover;
     min-width: 100%;
     min-height: 100%;
-    width: auto;
-    height: auto;
+/*    width: auto;*/
+/*    height: auto;*/
 
     /* Center the video */
     position: absolute;
