--- a/css/include.css
+++ b/css/include.css
@@ -96,3 +96,21 @@ body{
 ::-webkit-scrollbar-thumb:hover {
     background: #555; 
 }
+
+.rotate {
+    -webkit-animation: rotation 1.6s infinite linear;
+            animation: rotation 1.6s infinite linear;
+}
+
+@-webkit-keyframes rotation {
+    from {-webkit-transform: rotate(0deg);}
+    to   {-webkit-transform: rotate(359deg);}
+}
+
+@keyframes rotation {
+    from {-ms-transform: rotate(0deg);}
+    to   {-ms-transform: rotate(359deg);}
+
+    from {transform: rotate(0deg);}
+    to   {transform: rotate(359deg);}
+}
