--- a/css/include.css
+++ b/css/include.css
@@ -96,6 +96,29 @@ body{
 ::-webkit-scrollbar-thumb:hover {
     background: #555; 
 }
+.moving_square{
+    transform: scale(10%);
+}
+.moving_square{
+    -webkit-animation: scaling 1.6s infinite linear;
+            animation: scaling 1.6s infinite linear;
+}
+
+@-webkit-keyframes scaling {
+    0%   {-webkit-transform: scale(0,0);}
+    50%  {-webkit-transform: scale(1,1);}
+    100% {-webkit-transform: scale(0,0);}
+}
+
+@keyframes scaling {
+    0%   {-ms-transform: scale(0,0);}
+    50%  {-ms-transform: scale(1,1);}
+    100% {-ms-transform: scale(0,0);}
+
+    0%   {transform: scale(0,0);}
+    50%  {transform: scale(1,1);}
+    100% {transform: scale(0,0);}
+}
 
 .rotate {
     -webkit-animation: rotation 1.6s infinite linear;
