--- a/css/style.css
+++ b/css/style.css
@@ -327,7 +327,7 @@
     color: #fff;
     font-size: 2.5vw;
     line-height: 4vw;
-    margin: 2vw 0;
+    margin: 2vw 0 0 0;
 }
 /*
 #section_05 form input[name=comment] {
@@ -337,7 +337,7 @@
 */
 #section_05 form textarea, #section_05 form input{
     font-size: 2vw;
-    line-height: 2.5vw;
+    line-height: 5vw;
     font-family: "NotoSans", sans-serif;
     font-weight: 200;
     color: #fff;
@@ -345,6 +345,9 @@
     background: none;
     border: 0;
     border-bottom: 1px solid #fff;
+}
+#section_05 form textarea{
+    line-height: 4vw;
 }
 #section_05 form textarea:focus, #section_05 form input:focus{
     outline: none;
@@ -354,6 +357,7 @@
     padding: 1.5vw;
     font-size: 2.5vw;
     font-weight: 600;
+    line-height: normal;
     color: #fff;
     cursor: pointer;
     background-color: #002157;
