--- a/css/include.css
+++ b/css/include.css
@@ -96,13 +96,11 @@ body{
 ::-webkit-scrollbar-thumb:hover {
     background: #555; 
 }
-.moving_square{
-    transform: scale(10%);
-}
-.moving_square{
+.scaling{
     -webkit-animation: scaling 1.6s infinite linear;
             animation: scaling 1.6s infinite linear;
 }
+
 
 @-webkit-keyframes scaling {
     0%   {-webkit-transform: scale(0,0);}
