--- a/css/include.css
+++ b/css/include.css
@@ -13,6 +13,11 @@ body{
     font-size: 0;
     background-color: #1c2e5f;
 }
+input, textarea{
+    font-family: "NotoSans",sans-serif;
+    font-weight: 400;
+    font-style: italic;
+}
 .content_wrap h1,.content_wrap h2,.content_wrap h3,.content_wrap h4,.content_wrap h5,.content_wrap h6,.content_wrap p,.content_wrap div,.content_wrap span{
     cursor: inherit;
 }
