--- a/css/include.css
+++ b/css/include.css
@@ -6,6 +6,7 @@ body{
     overflow: hidden;
     line-height: 100vh;
     text-align: center;
+    position: relative;
     
     font-family: "NotoSans",sans-serif;
     font-weight: 400;
