--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@
 #section_01 .section_title{
     width: 100%;
     line-height: 15vw;
-    bottom: 0;
+    bottom: 4vw;
     left: 0;
     position: absolute;
     text-shadow: 1vw 1vw 1vw rgba(0,0,0,0.5);
