--- a/css/style.css
+++ b/css/style.css
@@ -304,7 +304,7 @@
     z-index: -1;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: rotate(0deg) translate(-50%,-50%);
 }
 #section_05 .content_wrap{
     line-height: 70vw;
