--- a/css/media.css
+++ b/css/media.css
@@ -3,10 +3,10 @@
 @media (min-width:1000px) and (min-height: 800px){
     /*include.css*/
     #wrap .content_wrap{
-        width: 800px;
+        width: 900px;
         height: 700px;
         margin-top: -350px;
-        margin-left: -400px;
+        margin-left: -450px;
     }
     .section_title{
         color: #fff;
@@ -144,7 +144,7 @@
         height: 40px;
         line-height: 40px;
     }
-    #section_04 .button_wrap li{
+    #section_04 .button_wrap li, #section_04 .button_wrap span{
         font-size: 20px;
         margin: 0 10px;
     }
@@ -190,10 +190,10 @@
 @media (max-height: 800px) and (min-aspect-ratio:10/8) {
     /*include.css*/
     #wrap .content_wrap{
-        width: 100vh;
+        width: 112.5vh;
         height: 87.5vh;
         margin-top: -43.75vh;
-        margin-left: -50vh;
+        margin-left: -56.25vh;
     }
     .section_title{
         color: #fff;
@@ -333,7 +333,7 @@
         height: 5vh;
         line-height: 5vh;
     }
-    #section_04 .button_wrap li{
+    #section_04 .button_wrap li, #section_04 .button_wrap span{
         font-size: 2.5vh;
         margin: 0 1.25vh;
     }
@@ -400,12 +400,12 @@
     }
     /*include.css*/
     #wrap .content_wrap{
-        width: 80vh;
+        width: 90vh;
         height: 70vh;
         top: 50%;
         margin-top: -35vh;
         left: 50%;
-        margin-left: -40vh;
+        margin-left: -45vh;
         position: absolute;
     }
     .section_title{
@@ -544,7 +544,7 @@
         height: 4vh;
         line-height: 4vh;
     }
-    #section_04 .button_wrap li{
+    #section_04 .button_wrap li, #section_04 .button_wrap span{
         font-size: 2vh;
         margin: 0 1vh;
     }
@@ -591,12 +591,12 @@
     and (max-width: 765px) and (max-width: 800px) and (max-aspect-ratio:8/10){
     /*include.css*/
     #wrap .content_wrap{
-        width: 100vw;
+        width: 112.5vw;
         height: 87.5vw;
         top: 50%;
         margin-top: -43.75vw;
         left: 50%;
-        margin-left: -50vw;
+        margin-left: -56.25vw;
         position: absolute;
     }
     .section_title{
@@ -737,7 +737,7 @@
         height: 5vw;
         line-height: 5vw;
     }
-    #section_04 .button_wrap li{
+    #section_04 .button_wrap li, #section_04 .button_wrap span{
         font-size: 2.5vw;
         margin: 0 1.25vw;
     }
