--- a/css/include.css
+++ b/css/include.css
@@ -44,24 +44,28 @@ input:focus, textarea:focus{
     font-size: 4vw;
     line-height: 8vw;
 }
-
+#wrap .is_portrait{
+    display: none;
+}
 #header{
-    width: 10vw;
-    height: 100vh;
+    height: 100%;
     line-height: 100vh;
+    text-align: center;
     bottom: -100vh;
     right: 0;
-    z-index: 100;
+    z-index: 49;
     position: fixed;
 }
 .gnb{
     display: inline-block;
+    line-height: normal;
     vertical-align: middle;
 }
 .gnb h1{
     width: 10vw;
     height: 10vw;
     cursor: pointer;
+    display: inline-block;
     background: url(../images/icon_button_top.png) no-repeat;
     background-size: 100%;
 }
@@ -86,6 +90,21 @@ input:focus, textarea:focus{
     border-left: 1px solid #fff;
 }
 
+#button_gnb{
+    width: 8vh;
+    height: 8vh;
+    
+    cursor: pointer;
+    background: url(../images/icon_button_top.png) no-repeat;
+    background-size: 100%;
+    
+    position: absolute;
+    bottom: 8vw;
+    right: 50%;
+    margin-right: -8vw;
+    z-index: 49;
+}
+
 #footer{
     width: 100%;
     font-size: 2vw;
@@ -97,6 +116,7 @@ input:focus, textarea:focus{
     position: absolute;
     z-index: 50;
     bottom: 0;
+    background: rgba(0,0,0,0.3);
 }
 
 /* width */
