test for mobile

--- a/css/include.css
+++ b/css/include.css
@@ -6,7 +6,8 @@ body{
     overflow: hidden;
     line-height: 100vh;
     text-align: center;
-    position: relative;
+    position: fixed;
+    bottom: 0;
     
     font-family: "NotoSans",sans-serif;
     font-weight: 400;
